<resources>
    <string name="app_name">RealmRunner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_compete">Compete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_page_uc">Nothing here yet! Content coming soon in a future update!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>