<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.realmrunner.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.realmrunner.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_collections"
        android:name="com.example.realmrunner.ui.collections.CollectionsFragment"
        android:label="@string/menu_collections"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/nav_compete"
        android:name="com.example.realmrunner.ui.compete.CompeteFragment"
        android:label="@string/menu_compete"
        tools:layout="@layout/fragment_compete" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.realmrunner.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>